Soy milk can be used to make tofu
Soy milk can be used to make cheese1
Cheese bread added (cheese is part of dough-making process)


CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....

1.7.0
THE GREAT WILDCRAFT TRANSITION BEGINS
- added herbs to Dressing

1.6.9

- Food Stuff:
Added Dressing (vinegar + egg white + oil)
Updated fish sauce recipe (check Cooking 104 for details)
Cooked food can be chopped up
Partially cooked & cooked vanilla meat can be charred in the firepit
Soy milk can be added to porridge
Cured meat nuggets can be used in trail mix
Gelatin stack increased from 16 to 32
Egg yolk can be used to make pasta
Added simmer recipe to rehydrate hardened lard
Tule root can be cooked into cattail roots

- The Great Fish Parity:
Vanilla fish can be used in EF stuff; broth, boiling, meals
Vanilla fish have part-baked & cooked states, can be baked, used in pies
Vanilla fish can be smashed and cut into fish nuggets
Fish nuggets, fish sausage, fish sauce, fish pemmican, fish gelatin, fried fish, non-vegetarian sushi, & seafood broth now vanilla items
Fish nuggets buffed to vanilla fish nutrition; has cured variants; requires more PS filets to make
Fish nugget models & textures changed to look more vanilla
Raw fish & fish nuggets can be used to make fish sauce
Raw fish nuggets & smashed fish are now edible
Fish sausage textures updated

- Trough Fixes:
Pressed mash trough texture fixed
Chickens and raccoons will now eat peanut skins from troughs
Bread crumbs can be used in large trough
Bread crumb small trough names fixed

- Compatibility Stuff: 
Ancient Tools maple compatibility added
Ancient Tools salted meat can be hung on meathooks, baked, put in pies, used in porridge/pasta/salad has part-baked & charred variants 
Ancient Tools meat can be smashed with the Acorns mallet
Ancient Tools animal brains can be used in fried balls & au gratin/pilaf/hot pasta
Ancient Tools bread crumb & birch/pine nutrition nerfed