@@ -1,7 +1,7 @@
 {
   "type": "code",
   "name": "Expanded Foods",
-  "version": "1.6.9",
+  "version": "1.7.0",
   "networkVersion": null,
   "description": "New recipes for existing food types.",
   "modID": "expandedfoods",
