@@ -41,6 +41,8 @@ CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 THE GREAT WILDCRAFT TRANSITION BEGINS
 - added herbs to Dressing
 
+- Dialogue added to Kitchenware Trader
+
 1.6.9
 
 - Food Stuff:
